src/App.css
body {
    margin: 0;
    /* font-family: 'Roboto Condensed', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

html,
body,
#root {
    font-family: 'Inter', 'Roboto', Helvetica, Arial, sans-serif, 'Lato', 'Inter', 'Apple Color Emoji', 'Segoe UI Emoji',
        'Segoe UI Symbol';
    height: 100%;
    overflow: hidden;
}

body {
    background-color: white;
}

a {
    color: black;
    text-decoration: none;
}
a:visited {
    color: black;
}
a:hover {
    text-decoration: 3px underline #5bb6ea;
}

.chromoscope-title {
    font-weight: bold;
    margin-right: 4px;
    text-decoration: none;
}
.dimed {
    color: lightgrey;
}

.about-modal,
.about-modal-hidden {
    z-index: 10001;
    opacity: 1;
    position: absolute;
    left: calc(25%);
    top: calc(10%);
    width: 50%;
    height: 80%;
    box-shadow: 0 0 15px #0008;
    background: white;
    border-radius: 10px;
    transition: opacity 0.3s ease;
    padding: 30px;
    line-height: 2;
    overflow-y: scroll;
}
.about-modal a {
    text-decoration: 2px underline grey dotted;
    text-underline-offset: 2px;
}
.about-modal a:hover {
    text-decoration: 2px underline black solid;
}
.about-modal h4 {
    margin-bottom: 0px;
    width: 100%;
    border-bottom: 1px solid rgb(72, 66, 66);
}
.about-modal ul {
    padding-left: 20px;
}
.about-modal b {
    font-weight: 600;
}
.about-modal ul {
    list-style-type: '- ';
}
.about-modal-footer {
    width: 100%;
    text-align: center;
    border-top: 1px solid rgb(72, 66, 66);
    /* background-color: rgb(229, 229, 229); */
}
.about-modal-footer a {
    text-decoration: none;
}
.about-modal-disable-button {
    width: 100%;
    border-radius: 6px;
    border: 1px solid grey;
    height: 40px;
    font-size: 16px;
    cursor: pointer;
    /* position: absolute; */
    /* bottom: 30px; */
}

.about-modal-hidden,
.about-modal-container-hidden {
    visibility: collapse;
}

.about-modal-container,
.about-modal-container-hidden {
    z-index: 10000;
    background-color: #0006;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.about-modal-close-button {
    cursor: pointer;
    position: absolute;
    right: 10px;
    top: 10px;
    background: none;
    border: none;
}

.title-github-link {
    display: inline-block;
    position: fixed;
    right: 200px;
}

.title-doc-link {
    display: inline-block;
    position: fixed;
    right: 20px;
}

.title-about-link {
    margin-left: 12px;
    margin-right: 12px;
    font-size: 12px;
    cursor: pointer;
}

.title-github-link svg,
.title-doc-link svg {
    height: 25px;
    vertical-align: middle;
    padding-right: 8px;
    color: black;
}

.title-about-link svg {
    height: 16px;
    padding-right: 4px;
    vertical-align: middle;
    color: black;
}

.panel-title {
    font-size: 14px;
    font-weight: bold;
}

.panel-title > small {
    font-size: 12px;
    margin-left: 6px;
}

.config-panel {
    visibility: hidden;
    background-color: #f6f6f6;
    border-right: 1px solid lightgray;
    padding: 20px;
    height: calc(100% - 40px);
    position: fixed;
    z-index: 999;
}

.config-panel-section-title {
    font-size: 14px;
    margin-top: 20px;
    font-weight: bold;
}

.config-panel-input-container {
    margin-top: 18px;
    width: 100%;
}

.config-panel-label {
    /* label on the left of HTML elements */
    font-size: 14px;
    height: 30px;
    line-height: 30px;
    width: 40%;
    display: inline-block;
}

.config-panel-label > small {
    margin-left: 4px;
    font-size: 10px;
    font-weight: bold;
}

.config-panel-input {
    width: 60%;
    display: inline-block;
}

.config-panel-dropdown {
    font-size: 14px;
    height: 30px;
    width: 100%;
}

.nav-dropdown {
    font-size: 14px;
    width: 150px;
    height: 30px;
    border-radius: 0px;
    border: 1px solid grey;
    position: absolute;
    left: 3px;
    scroll-margin-top: 50px;
}

.nav-dropdown:focus {
    border-radius: 0px;
}

.zoom-in-button,
.zoom-out-button,
.zoom-left-button,
.zoom-right-button {
    cursor: pointer;
    position: absolute;
    font-size: 14px;
    height: 30px;
    width: 30px;
    margin-left: 20px;
    padding: 0px;
    /* padding-left: 10px;
    padding-right: 10px; */
    line-height: 30px;
    border: 1px solid lightgrey;
}
.zoom-in-button {
    left: 380px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.zoom-out-button {
    left: 410px;
    line-height: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.zoom-left-button {
    left: 455px;
    line-height: 10px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}
.zoom-right-button {
    left: 485px;
    line-height: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.zoom-in-button:hover,
.zoom-out-button:hover,
.zoom-left-button:hover,
.zoom-right-button:hover {
    background: lightgrey;
}

.gene-search {
    position: absolute;
    font-size: 14px;
    left: 158px;
    height: 28px;
    width: 160px;
    /* border-radius: 10px; */
    margin-left: 20px;
    padding-left: 29px;
    padding-right: 10px;
    padding-top: 0px;
    padding-bottom: 0px;
    line-height: 30px;
    border: 1px solid grey;
}

.gene-search-icon {
    margin-top: 1px;
    margin-left: 22px;
    width: 16px;
    height: 16px;
    position: absolute;
    left: 164px;
    cursor: pointer;
    z-index: 999;
    fill: grey;
}

.config-panel-search-box {
    font-size: 14px;
    height: calc(30px - 6px);
    width: calc(100% - 24px);
    padding: 3px 12px;
}
/* ... */

